# cryptogram

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
cryptogram/: __init__.py  _cryptogram.c  _fallback.py
tests/: test_cryptogram.py
